# sw-compdocs-gen

./: README-ja.md  README.md  pyproject.toml  run_all.py  run_test.py  run_update.py
.github/workflows/: run_all.yml  run_test.yml
res/: sw_compdocs_keybindings.toml  sw_compdocs_label.toml  sw_compdocs_template.toml
src/: mypy.ini  requirements.txt
src/sw_compdocs/: _types.py  component.py  container.py  convert.py  document.py  exporter.py  generator.py  language.py  main.py  renderer.py  resource.py  steamfind.py  template.py  validator.py  wraperr.py
src/sw_compdocs_tests/: test_component.py  test_container.py  test_convert.py  test_document.py  test_generator.py  test_language.py  test_renderer.py  test_resource.py  test_template.py  test_validator.py
tests/: test_component.py  test_container.py  test_document.py  test_exporter.py  test_generator.py  test_language.py  test_main.py  test_renderer.py  test_resource.py  test_steamfind.py  test_template.py  test_types.py  test_wraperr.py
