[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sw_compdocs"
version = "0.1.0"
license = {file = "LICENSE"}
dependencies = ["lxml"]

[project.optional-dependencies]
dev = [
    "types-lxml",
    "pyflakes",
    "black",
    "mypy",
]

[tool.mypy]
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
local_partial_types = true
strict_equality = true
extra_checks = true
