[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sw_compdocs"
version = "0.1.0"
license = {file = "LICENSE"}
dependencies = ["lxml"]

[project.optional-dependencies]
dev = [
    "types-lxml",
    "pyflakes",
    "black",
]

[project.scripts]
sw_compdocs = "sw_compdocs.main:main"

[tool.pyright]
include=["*.py", "src/**/*.py", "tests/**/*.py"]
extraPaths=["src/"]
pythonPlatform="All"
typeCheckingMode="strict"
reportPrivateUsage="none"
